k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autenticacion-frontend-ap
  namespace: autenticacion-ap
spec:
  selector:
    matchLabels:
      app: autenticacion-frontend-ap
  replicas: 1
  template:
    metadata:
      labels:
        app: autenticacion-frontend-ap
    spec:
      containers:
        - name: autenticacion-frontend-ap
          image: localhost:5000/auth-frontend-dev
          ports:
            - containerPort: 80
