k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
#   type: NodePort
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
#       NodePort: 30001
      targetPort: 80
